# tradebridge-1-1

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md
backend/: main.py  requirements.txt
database/: init.sql
docker/: Dockerfile  docker-compose.yml
src/: main.cpp
